cmake_minimum_required(VERSION 3.0.0)

set (CURRENT_PROJECT "MemoryPool")
project(${CURRENT_PROJECT})

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

#Debug
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Zi /MTd /Od /std:c++17")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_CRT_SECURE_NO_WARNINGS")
set(CMAKE_DEBUG_POSTFIX "_d")

#Release
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /O2 /std:c++17")

file(GLOB SOURCE_FILES MemoryPool.h MemoryPool.cpp)
file(GLOB TEST_FILES Test.cpp)

source_group("" FILES ${SOURCE_FILES} ${TEST_FILES})

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE")
add_executable(${CURRENT_PROJECT} WIN32 ${SOURCE_FILES}	${TEST_FILES})